force-app/main/default/objects/skuid__Preferences__c/fields/skuid__Auto_Gen_Page_Support_File__c.field-meta.xml
<CustomField>
    <fullName>skuid__Auto_Gen_Page_Support_File__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This setting has been deprecated and is no longer used by Skuid.</description>
    <label>(DEPRECATED) Auto Gen Page Support File</label>
    <type>Checkbox</type>
</CustomField>