force-app/main/default/objects/skuid__Preferences__c/fields/skuid__Default_Builder_Theme__c.field-meta.xml
<CustomField>
    <fullName>skuid__Default_Builder_Theme__c</fullName>
    <defaultValue>&quot;Builder Light&quot;</defaultValue>
    <label>Default Composer Theme</label>
    <length>40</length>
    <type>Text</type>
</CustomField>