force-app/main/default/objects/skuid__Preferences__c/fields/skuid__Default_Mobile_Theme__c.field-meta.xml
<CustomField>
    <fullName>skuid__Default_Mobile_Theme__c</fullName>
    <label>Default Mobile Theme</label>
    <length>40</length>
    <type>Text</type>
</CustomField>