force-app/main/default/objects/skuid__Preferences__c/fields/skuid__Disable_Collaboration_Polling__c.field-meta.xml
<CustomField>
    <fullName>skuid__Disable_Collaboration_Polling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable features of the Collaboration Framework that require client-side server polling, such as the Page Interaction Service. Features not dependent on polling, such as Page Revision Conflict Detection, are not affected by this setting.</description>
    <label>Disable Collaboration Polling</label>
    <type>Checkbox</type>
</CustomField>