force-app/main/default/objects/skuid__Preferences__c/fields/skuid__New_Skuid_User__c.field-meta.xml
<CustomField>
    <fullName>skuid__New_Skuid_User__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicate that user is First Time user - to manage UI Experience in admin app.</description>
    <label>New Skuid User</label>
    <type>Checkbox</type>
</CustomField>