force-app/main/default/objects/skuid__Preferences__c/fields/skuid__Show_SF_Header_Skuid_Core__c.field-meta.xml
<CustomField>
    <fullName>skuid__Show_SF_Header_Skuid_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting has been deprecated and is no longer used by Skuid.</description>
    <label>(DEPRECATED) Show SF Header in Skuid app</label>
    <type>Checkbox</type>
</CustomField>